--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.0"
+    "react-router-dom": "^7.7.0",
+    "serve": "^14.2.4"
   },
   "devDependencies": {
     "react-scripts": "^5.0.1"
